--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@coreui/coreui": "^5.2.0",
+    "@coreui/react": "^5.5.0",
     "@emailjs/browser": "^3.7.0",
     "@twilio/conversations": "^2.6.0",
     "@vercel/analytics": "^1.4.1",
@@ -16,7 +18,9 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.4.0",
-    "styled-components": "^5.3.6",
+    "react-multi-carousel": "^2.8.5",
+    "styled-components": "^5.3.11",
+    "swiper": "^11.2.5",
     "twilio-client": "^1.15.1"
   },
   "devDependencies": {
