--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.4.0",
     "react-multi-carousel": "^2.8.5",
+    "react-player": "^2.16.0",
     "styled-components": "^5.3.11",
     "swiper": "^11.2.5",
     "twilio-client": "^1.15.1"
