--- a/package.json
+++ b/package.json
@@ -22,12 +22,16 @@
     "react-player": "^2.16.0",
     "styled-components": "^5.3.11",
     "swiper": "^11.2.5",
-    "twilio-client": "^1.15.1"
+    "twilio-client": "^1.15.1",
+    "video-react": "^0.16.0",
+    "video.js": "^8.22.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@types/styled-components": "^5.1.26",
+    "@types/video-react": "^0.15.8",
+    "@types/video.js": "^7.3.58",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.0.0",
     "@vitejs/plugin-react": "^2.1.0",
